--- a/styles/main.less
+++ b/styles/main.less
@@ -41,6 +41,7 @@ thead tr {
 
 th {
   font-size: 1.17em;
+  text-align: right;
   white-space: nowrap;
 }
 
@@ -51,6 +52,12 @@ td, td * {
 th, td {
   //text-align: right !important;
   vertical-align: top;
+}
+
+.small-text {
+  font-size: 12px;
+  font-weight: normal;
+  margin: 0 5px;
 }
 
 .odd {
@@ -314,9 +321,9 @@ md-dialog {
   direction: rtl;
 }
 
-input.md-input {
+input.md-input, textarea.md-input {
   font-family: IRANSans-web, Sahel, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 12px;
+  font-size: 14px;
 }
 
 ul.ivh-treeview {
