--- a/templates/ontology/class.html
+++ b/templates/ontology/class.html
@@ -1,29 +1,41 @@
-<div>
+<div ng-cloak>
     <div layout-margin>
 
         <div>
-            <h1>{{clazz.faLabel}}</h1>
+            <h1>{{clazz.faLabel}}<a class="small-text" ui-sref="ontology.class-edit({classUrl:clazz.url})">(ویرایش)</a></h1>
         </div>
 
         <div>
             <table>
                 <tr>
                     <td class="left" style="min-width: 120px;">
-                        <h3>عنوان : </h3>
+                        <h3>نام کلاس : </h3>
+                    </td>
+                    <td>{{clazz.url | extractClass}}</td>
+                </tr>
+                <tr>
+                    <td class="left" style="min-width: 120px;">
+                        <h3>آدرس : </h3>
+                    </td>
+                    <td><a ui-sref="ontology.class({classUrl:clazz.url})">{{clazz.url}}</a></td>
+                </tr>
+                <tr>
+                    <td class="left" style="min-width: 120px;">
+                        <h3>برچسب فارسی : </h3>
                     </td>
                     <td>{{clazz.faLabel}}</td>
                 </tr>
                 <tr>
                     <td class="left">
-                        <h3>توضیحات : </h3>
+                        <h3>برچسب انگلیسی : </h3>
                     </td>
-                    <td>{{clazz.faComment}}</td>
+                    <td>{{clazz.enLabel}}</td>
                 </tr>
                 <tr>
                     <td class="left">
-                        <h3>عنوان انگلیسی : </h3>
+                        <h3>توضیحات فارسی : </h3>
                     </td>
-                    <td>{{clazz.enLabel}}</td>
+                    <td>{{clazz.faComment}}</td>
                 </tr>
                 <tr>
                     <td class="left">
@@ -62,42 +74,29 @@
     <md-divider></md-divider>
 
     <div layout-margin>
-        <h3>ویژگی‌های کلاس {{clazz.faLabel}} : </h3>
+        <h3>خصیصه‌های کلاس {{clazz.faLabel}}</h3>
         <div>
             <table cellpadding="5" cellspacing="0" style="width: 100%;">
                 <thead>
                 <tr>
-                    <th>عنوان</th>
-                    <th>سایر عناوین</th>
-                    <th>label</th>
-                    <th>variant labels</th>
-                    <th>ویژگی‌های معادل</th>
-                    <!--<th>دامنه</th>-->
-                    <!--<th>ranges</th>-->
-                    <th>types</th>
+                    <th>#</th>
+                    <th>نام</th>
+                    <th>برچسب فارسی</th>
+                    <th>برچسب انگلیسی</th>
+                    <th>کلاس (Domain)</th>
                 </tr>
                 </thead>
                 <tbody>
                 <tr ng-repeat="p in clazz.properties" ng-class="{even: $even, odd: $odd}">
+                    <td>{{$index+1}}</td>
+                    <!--<td><span>{{p.url | extractClass}}</span></td>-->
+                    <td>
+                        <a class="fa fa-1x fa-external-link" target="_blank" ui-sref="ontology.property({propertyUrl:p.url})"></a>
+                        <a style="margin-right: 10px;" ui-sref="ontology.property({propertyUrl:p.url})">{{p.url | extractClass}}</a>
+                    </td>
                     <td><span>{{p.faLabel}}</span></td>
-                    <td>
-                        <span ng-repeat="fvl in p.faVariantLabels">{{fvl}}{{$last ? '' : ' - '}}</span>
-                    </td>
                     <td><span>{{p.enLabel}}</span></td>
-                    <td>
-                        <span ng-repeat="evl in p.enVariantLabels">{{evl}}{{$last ? '' : ' - '}}</span>
-                    </td>
-                    <td>
-                        <span ng-repeat="ep in p.equivalentProperties">{{ep}}{{$last ? '' : ' - '}}</span>
-                    </td>
-                    <!--<td><span>{{p.domain}}</span></td>-->
-                    <!--<td><span>{{p.ranges}}</span></td>-->
-                    <td style="white-space: nowrap;">
-                        <a ng-repeat="pt in p.types"
-                            ui-sref="ontology.property({propertyUrl:p.url})">{{pt | mapPrefix}}{{$last ? '' : ' - '}}</a>
-                        <a class="fa fa-1x fa-external-link" target="_blank"
-                           ui-sref="ontology.property({propertyUrl:p.url})"></a>
-                    </td>
+                    <td><div ng-repeat="d in p.domains track by $index">{{d | extractClass}}</div></td>
                 </tr>
                 </tbody>
             </table>
