--- a/styles/main.less
+++ b/styles/main.less
@@ -225,10 +225,6 @@ fieldset {
   }
 }
 
-.ivh-treeview-node-link {
-  font-size: 12px;
-}
-
 .breadcrumb {
   padding: 8px 15px;
   margin: 0 0 0px;
@@ -328,4 +324,13 @@ input.md-input, textarea.md-input {
 
 ul.ivh-treeview {
   padding-left: 40px;
+}
+
+li.ivh-treeview-node {
+  line-height: 250%;
+}
+
+.ivh-treeview-node-link {
+  color: lightblue;
+  font-size: 10px;
 }
