--- a/styles/main.less
+++ b/styles/main.less
@@ -331,6 +331,14 @@ li.ivh-treeview-node {
 }
 
 .ivh-treeview-node-link {
-  color: lightblue;
-  font-size: 10px;
+  color: #428bca;
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+ul.ivh-treeview .ivh-treeview-node-leaf .ivh-treeview-toggle {
+  padding: 0 5px;
 }
