--- a/templates/ontology/tree.html
+++ b/templates/ontology/tree.html
@@ -17,10 +17,10 @@
             <span ivh-treeview-toggle>
                 <span ivh-treeview-twistie></span>
             </span>
-            <span class="ivh-treeview-node-label" ivh-treeview-toggle>
-                <span>{{trvw.label(node)}}</span>
-                <a class="ivh-treeview-node-link fa fa-1x fa-external-link"
-                   ui-sref="ontology.class({classUrl:node.url})"></a>
+            <!--<span class="ivh-treeview-node-label" ivh-treeview-toggle>-->
+            <span class="ivh-treeview-node-label">
+                <a class="ivh-treeview-node-link"
+                   ui-sref="ontology.class({classUrl:node.url})">{{trvw.label(node)}}</a>
             </span>
             <div ivh-treeview-children></div>
         </script>
