--- a/styles/main.css
+++ b/styles/main.css
@@ -129,10 +129,6 @@ h6 {
   font-family: IRANSans-web, Sahel, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 14px;
 }
-body {
-  overflow-y: scroll;
-  direction: rtl;
-}
 h1,
 h2,
 h3,
@@ -153,6 +149,44 @@ h6 {
 }
 .right {
   text-align: right !important;
+}
+.green {
+  color: green;
+}
+.red {
+  color: red;
+}
+span.button {
+  cursor: pointer;
+  opacity: 0.7;
+  -webkit-transition: 0.4s;
+  -moz-transition: 0.4s;
+  -ms-transition: 0.4s;
+  -o-transition: 0.4s;
+}
+span.button:hover {
+  opacity: 1;
+}
+table.simple {
+  width: 100%;
+  border: solid 1px #d1e4f1;
+  border-left: none;
+}
+table.simple th,
+table.simple td {
+  border-left: solid 1px #d1e4f1;
+}
+table.simple tfoot td {
+  border-top: solid 1px #d1e4f1;
+}
+table.simple tr {
+  -webkit-transition: background-color 0.25s;
+  -moz-transition: background-color 0.25s;
+  -ms-transition: background-color 0.25s;
+  -o-transition: background-color 0.25s;
+}
+table.simple tr:hover {
+  background-color: #e2f2f9;
 }
 thead tr {
   background-color: #d9edf7;
@@ -238,6 +272,13 @@ div.block-screen {
   border-radius: 2px;
   margin: 2px 0;
   padding: 2px;
+}
+a.link {
+  color: deepskyblue;
+  text-decoration: none;
+}
+a.link:hover {
+  text-decoration: underline;
 }
 fieldset {
   border: solid 1px #ddd;
@@ -348,6 +389,9 @@ fieldset .dashboard-link span.icon-raw-text {
   color: #F00;
   font-size: 14px;
 }
+ul.small {
+  margin: 0;
+}
 /**/
 .loading {
   direction: rtl;
@@ -387,6 +431,14 @@ fieldset .dashboard-link span.icon-raw-text {
 }
 md-icon svg {
   fill: inherit;
+}
+md-autocomplete-wrap {
+  max-height: 30px;
+  overflow: hidden;
+}
+md-autocomplete-wrap input[type=search] {
+  height: 30px;
+  font-size: 12px;
 }
 md-sidenav,
 md-sidenav.md-locked-open,
