--- a/templates/ontology/class.html
+++ b/templates/ontology/class.html
@@ -8,19 +8,19 @@
         <div>
             <table>
                 <tr>
-                    <td class="left" style="min-width: 120px;">
+                    <td class="left" style="min-width: 125px;">
                         <h3>نام کلاس : </h3>
                     </td>
-                    <td>{{clazz.url | extractClass}}</td>
+                    <td>{{clazz.url | extractLastUrlItem}}</td>
                 </tr>
                 <tr>
-                    <td class="left" style="min-width: 120px;">
+                    <td class="left">
                         <h3>آدرس : </h3>
                     </td>
                     <td><a ui-sref="ontology.class({classUrl:clazz.url})">{{clazz.url}}</a></td>
                 </tr>
                 <tr>
-                    <td class="left" style="min-width: 120px;">
+                    <td class="left">
                         <h3>برچسب فارسی : </h3>
                     </td>
                     <td>{{clazz.faLabel}}</td>
@@ -48,7 +48,7 @@
                         <h3>کلاس والد : </h3>
                     </td>
                     <td>
-                        <a ui-sref="ontology.class({classUrl:clazz.subClassOf})">{{parent.faLabel}}</a>
+                        <a ui-sref="ontology.class({classUrl:clazz.subClassOf})">{{clazz.subClassOf | extractLastUrlItem}}</a>
                     </td>
                 </tr>
                 <tr>
@@ -74,9 +74,9 @@
     <md-divider></md-divider>
 
     <div layout-margin>
-        <h3>خصیصه‌های کلاس {{clazz.faLabel}}</h3>
+        <h3>خصیصه‌های کلاس «{{clazz.faLabel}}»</h3>
         <div>
-            <table cellpadding="5" cellspacing="0" style="width: 100%;">
+            <table cellpadding="5" cellspacing="0" class="simple">
                 <thead>
                 <tr>
                     <th>#</th>
@@ -89,14 +89,10 @@
                 <tbody>
                 <tr ng-repeat="p in clazz.properties" ng-class="{even: $even, odd: $odd}">
                     <td>{{$index+1}}</td>
-                    <!--<td><span>{{p.url | extractClass}}</span></td>-->
-                    <td>
-                        <a class="fa fa-1x fa-external-link" target="_blank" ui-sref="ontology.property({propertyUrl:p.url})"></a>
-                        <a style="margin-right: 10px;" ui-sref="ontology.property({propertyUrl:p.url})">{{p.url | extractClass}}</a>
-                    </td>
+                    <td><a ui-sref="ontology.property({propertyUrl:p.url})">{{p.url | extractLastUrlItem}}</a></td>
                     <td><span>{{p.faLabel}}</span></td>
                     <td><span>{{p.enLabel}}</span></td>
-                    <td><div ng-repeat="d in p.domains track by $index">{{d | extractClass}}</div></td>
+                    <td><ul class="small"><li ng-repeat="d in p.domains track by $index">{{d | extractLastUrlItem}}</li></ul></td>
                 </tr>
                 </tbody>
             </table>
