--- a/templates/ontology/property-edit.html
+++ b/templates/ontology/property-edit.html
@@ -1,7 +1,7 @@
-<div>
+<div class="rtl">
     <div layout-margin layout="column">
 
-        <h1>{{property.url | extractClass}}</h1>
+        <h1>{{property.url | extractLastUrlItem}}</h1>
 
         <md-input-container>
             <label>آدرس :‌ </label>
@@ -50,7 +50,9 @@
 
     </div>
 
+    <br>
     <div layout-margin>
-        <md-button ng-click="save($event)" class="md-primary md-raised">ذخیره</md-button>
+        <md-button ng-click="addProperty(property)" class="md-primary md-raised">انتخاب</md-button>
+        <md-button ng-click="cancel($event)" class=" md-raised">انصراف</md-button>
     </div>
 </div>
