--- a/templates/ontology/property.html
+++ b/templates/ontology/property.html
@@ -12,7 +12,7 @@
                     <td class="left" style="min-width: 160px;">
                         <h3>نام خصیصه : </h3>
                     </td>
-                    <td>{{property.url | extractClass}}</td>
+                    <td>{{property.url | extractLastUrlItem}}</td>
                 </tr>
                 <tr>
                     <td class="left">
