ontology tree : graphical view

--- a/styles/main.less
+++ b/styles/main.less
@@ -2,6 +2,7 @@
 @import "fonts";
 @import "scrollbar";
 @import "tags";
+@import "svg";
 
 * {
   font-family: IRANSans-web, Sahel, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
