--- a/styles/svg.css
+++ b/styles/svg.css
@@ -1,4 +1,7 @@
 svg.tree {
+  position: absolute;
+  top: 0;
+  left: 0;
   height: 100%;
   width: 100%;
 }
@@ -10,6 +13,10 @@ svg.tree {
 .node text {
   font-family: IRANSans-web, Sahel, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 12px;
+}
+.node text:hover {
+  cursor: pointer;
+  stroke: dodgerblue;
 }
 .link {
   fill: none;
