--- a/styles/svg.less
+++ b/styles/svg.less
@@ -1,8 +1,12 @@
-svg.tree{
-  height:100%;
-  width:100%;
-}
 
+
+svg.tree {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
 
 .node circle {
   fill: #fff;
@@ -13,6 +17,11 @@ svg.tree{
 .node text {
   font-family: IRANSans-web, Sahel, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 12px;
+
+  &:hover {
+    cursor: pointer;
+    stroke: dodgerblue;
+  }
 }
 
 .link {
