fix ontology tree : graphical view

--- a/templates/ontology/tree.html
+++ b/templates/ontology/tree.html
@@ -33,8 +33,8 @@
     </div>
 </div>
 
-<div ng-if="type=='GRAPHICAL'" style="position: relative;">
-<svg id="tree-graphical" ></svg>
+<div ng-if="type=='GRAPHICAL'" style="position: relative; direction: ltr; text-align: left;" dir="ltr">
+    <svg id="tree-graphical"></svg>
 </div>
 
 <md-divider></md-divider>
