--- a/templates/ontology/property-edit.html
+++ b/templates/ontology/property-edit.html
@@ -52,7 +52,7 @@
 
     <br>
     <div layout-margin>
-        <md-button ng-click="addProperty(property)" class="md-primary md-raised">انتخاب</md-button>
+        <md-button ng-click="addProperty(property, $event)" class="md-primary md-raised">تایید</md-button>
         <md-button ng-click="cancel($event)" class=" md-raised">انصراف</md-button>
     </div>
 </div>
