درخت هستان شناسی، بازکردن و بستن همه نودها

--- a/templates/mappings/property.html
+++ b/templates/mappings/property.html
@@ -39,8 +39,8 @@
             <label>allNull</label>
             <md-select ng-model="query.allNull">
                 <md-option value=""><em>None</em></md-option>
-                <md-option value="True"><em>True</em></md-option>
-                <md-option value="False"><em>False</em></md-option>
+                <md-option value="true"><em>True</em></md-option>
+                <md-option value="false"><em>False</em></md-option>
             </md-select>
         </md-input-container>
 
@@ -48,8 +48,8 @@
             <label>oneNull</label>
             <md-select ng-model="query.oneNull">
                 <md-option value=""><em>None</em></md-option>
-                <md-option value="True"><em>True</em></md-option>
-                <md-option value="False"><em>False</em></md-option>
+                <md-option value="true"><em>True</em></md-option>
+                <md-option value="false"><em>False</em></md-option>
             </md-select>
         </md-input-container>
 
@@ -57,8 +57,8 @@
             <label>approved</label>
             <md-select ng-model="query.approved">
                 <md-option value=""><em>None</em></md-option>
-                <md-option value="True"><em>True</em></md-option>
-                <md-option value="False"><em>False</em></md-option>
+                <md-option value="true"><em>True</em></md-option>
+                <md-option value="false"><em>False</em></md-option>
             </md-select>
         </md-input-container>
 
