--- a/styles/svg.less
+++ b/styles/svg.less
@@ -1,4 +1,32 @@
+@import "defs";
 
+div#tree-graphical-container {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-color: white;
+  z-index: 1001;
+  overflow: scroll;
+  direction: ltr;
+  text-align: left;
+
+  .close {
+    position: fixed;
+    left: 5px;
+    top: 5px;
+    cursor: pointer;
+    color: red;
+    opacity: 0.5;
+    .transition(opacity .25s);
+
+    &:hover {
+      opacity: 1;
+    }
+  }
+
+}
 
 svg.tree {
   position: absolute;
