--- a/templates/ontology/tree.html
+++ b/templates/ontology/tree.html
@@ -7,10 +7,10 @@
         <md-radio-button value="EN">English</md-radio-button>
     </md-radio-group>
     <div style="width: 100px"></div>
-    <md-radio-group ng-model="type" layout="row">
-        <md-radio-button value="SIMPLE" class="md-primary">ساده</md-radio-button>
-        <md-radio-button value="GRAPHICAL">گرافیکی</md-radio-button>
-    </md-radio-group>
+    <!--<md-radio-group ng-model="type" layout="row">-->
+    <!--<md-radio-button value="SIMPLE" class="md-primary">ساده</md-radio-button>-->
+    <!--<md-radio-button value="GRAPHICAL">گرافیکی</md-radio-button>-->
+    <!--</md-radio-group>-->
 </div>
 
 <md-divider></md-divider>
@@ -19,16 +19,21 @@
     <div layout-margin ng-if="items">
         <md-button class="md-raised md-primary" ng-click="expandAll()">نمایش همه</md-button>
         <md-button class="md-raised md-primary" ng-click="collapseAll()"
-                   ng-style="{'background-color': 'green'}">بستن همه</md-button>
+                   ng-style="{'background-color': 'green'}">بستن همه
+        </md-button>
 
-<!--
-        <md-input-container>
-            <label>باز کردن در سطح</label>
-            <md-select ng-model="level" ng-change="expandTo(level)">
-                <md-option ng-repeat="i in [1,2,3,4,5,6,7,8,9]"><em>{{i}}</em></md-option>
-            </md-select>
-        </md-input-container>
--->
+        <md-button class="md-raised md-primary" ng-click="switchView()"
+                   ng-style="{'background-color': 'cadetblue'}">نمایش گرافیکی
+        </md-button>
+
+        <!--
+                <md-input-container>
+                    <label>باز کردن در سطح</label>
+                    <md-select ng-model="level" ng-change="expandTo(level)">
+                        <md-option ng-repeat="i in [1,2,3,4,5,6,7,8,9]"><em>{{i}}</em></md-option>
+                    </md-select>
+                </md-input-container>
+        -->
     </div>
     <div ivh-treeview="items"
          ivh-treeview-use-checkboxes="false"
@@ -47,13 +52,12 @@
     </div>
 </div>
 
-<div ng-show="type=='GRAPHICAL'" style="position: relative; direction: ltr; text-align: left;" dir="ltr">
-    <!--<div id="tree-graphical-container" style="position: absolute;left:0; top:0; right: 0; width: 720px;">-->
-        <svg id="tree-graphical"></svg>
-    <!--</div>-->
+<div ng-show="type=='GRAPHICAL'" id="tree-graphical-container" class="scroll2"  dir="ltr">
+    <span class="close fa fa-lg fa-close" ng-click="switchView()"></span>
+    <svg id="tree-graphical"></svg>
 </div>
 
-<md-divider ng-if="items"></md-divider >
+<md-divider ng-if="items"></md-divider>
 
 <div layout-margin="" ng-if="items">
     <a class="fa fa-lg fa-plus green link" ui-sref="ontology.class-edit({classUrl:''})"></a>
