--- a/templates/mappings/template.html
+++ b/templates/mappings/template.html
@@ -72,11 +72,11 @@
         </tr>
         </thead>
         <tbody>
-        <tr ng-repeat="item in items" ng-class="{even: $even, odd: $odd}">
-            <td>{{(paging.pageIndex * paging.size + $index)+1}}</td>
-            <td>{{item.template}}</td>
-            <td></td>
-            <td></td>
+        <tr ng-repeat="item in items" class="clickable" ng-class="{even: $even, odd: $odd}">
+            <td ng-click="showItem(item, $event);">{{(paging.pageIndex * paging.size + $index)+1}}</td>
+            <td ng-click="showItem(item, $event);">{{item.template}}</td>
+            <td ng-click="showItem(item, $event);">{{item.weight}}</td>
+            <td ng-click="showItem(item, $event);"></td>
         </tr>
         </tbody>
     </table>
