--- a/templates/mappings/template-item.html
+++ b/templates/mappings/template-item.html
@@ -1,36 +1,60 @@
-<div style="min-width: 750px;" class="scroll2">
-    <table class="simple" cellspacing="0" cellpadding="5">
-        <thead>
-        <tr>
-            <th>predicate</th>
-            <th>constant</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr ng-repeat="rule in selectedItem.rules" class="clickable" ng-class="{even: $even, odd: $odd}">
-            <td>{{rule.predicate}}</td>
-            <td>{{rule.constant}}</td>
-        </tr>
-        </tbody>
-    </table>
-    <br>
-    <md-divider></md-divider>
-    <br>
-    <table class="simple" cellspacing="0" cellpadding="5">
-        <thead>
-        <tr>
-            <th>#</th>
-            <th>property</th>
-            <th>predicate</th>
-            <th>unit</th>
-            <th>transform</th>
-            <th>تایید</th>
-            <th style="width: 120px;"></th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr ng-repeat='r in selectedItemPropertyRules' ng-include src="'./templates/mappings/template-item-rule.html'"></tr>
-        <tr ng-repeat='r in selectedItemPropertyRecommendations' ng-include src="'./templates/mappings/template-item-rule.html'"></tr>
-        </tbody>
-    </table>
+<div style="min-width: 760px; min-height: 520px;">
+    <div class="fixed-toolbar-container">
+        <md-toolbar class="md-hue-2" flex="">
+            <div class="md-toolbar-tools">
+                <h4>{{selectedItem.template}}</h4>
+                <span flex></span>
+                <md-button class="md-icon-button" aria-label="close">
+                    <span class="fa fa-lg fa-close" ng-click="close();"></span>
+                </md-button>
+            </div>
+        </md-toolbar>
+    </div>
+    <div layout="column" class="under-toolbar scroll2">
+
+        <table class="simple" cellspacing="0" cellpadding="2">
+            <thead>
+            <tr>
+                <th>predicate</th>
+                <th>constant</th>
+            </tr>
+            </thead>
+            <tfoot>
+            <tr>
+                <td colspan="2">
+                    <span class="fa fa-plus green button" ng-click="addConstant();"></span>
+                    <span class="green button" ng-click="addConstant();">افزودن</span>
+                </td>
+            </tr>
+            </tfoot>
+            <tbody>
+            <tr ng-repeat="rule in selectedItem.rules" class="clickable" ng-class="{even: $even, odd: $odd}">
+                <td>{{rule.predicate}}</td>
+                <td>{{rule.constant}}</td>
+            </tr>
+            </tbody>
+        </table>
+        <br>
+        <md-divider></md-divider>
+        <br>
+        <table class="simple" cellspacing="0" cellpadding="2">
+            <thead>
+            <tr>
+                <th>#</th>
+                <th>property</th>
+                <th>predicate</th>
+                <th>unit</th>
+                <th>transform</th>
+                <th>تایید</th>
+                <th style="width: 120px;"></th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr ng-repeat='r in selectedItemPropertyRules' ng-include
+                src="'./templates/mappings/template-item-rule.html'"></tr>
+            <tr ng-repeat='r in selectedItemPropertyRecommendations' ng-include
+                src="'./templates/mappings/template-item-rule.html'"></tr>
+            </tbody>
+        </table>
+    </div>
 </div>
