--- a/templates/mappings/property.html
+++ b/templates/mappings/property.html
@@ -1,5 +1,5 @@
-<md-content layout-margin>
-    <div layout="row">
+<md-content layout-margin ng-show="loaded">
+<div layout="row">
         <md-input-container>
             <label>الگو : </label>
             <input type="text" ng-model="query.templateName"/>
@@ -96,4 +96,8 @@
         </tr>
         </tbody>
     </table>
+</md-content>
+
+<md-content ng-show="err">
+    <h1 style="text-align: center; color: red;">خطایی رخ داده است!</h1>
 </md-content>
